syntax = "proto3";
package ledger.core.message.bitcoin;

import "bitcoin/account.proto";
import "bitcoin/operation.proto";
import "common/amount.proto";
import "common/block.proto";

message LedgerExplorerConfig {
    uint32 version = 1;
    string endpoint = 2;
    uint32 port = 3;
}

// SYNC_ACCOUNT
message SyncAccountRequest {
    AccountID account_id = 1;
    LedgerExplorerConfig explorer = 2;
}

message SyncAccountResponse {
    bool new_acc = 1;
}

// GET_BALANCE
message GetBalanceRequest {
    AccountID account_id = 1;
}

message GetBalanceResponse {
    common.Amount amount = 1;
}

// GET_OPERATIONS
message GetOperationsRequest {
    AccountID account_id = 1;
}

message GetOperationsResponse {
    repeated Operation operations = 1;
}

// GET_LAST_BLOCK
message GetLastBlockRequest {
    AccountID account_id = 1;
}

message GetLastBlockResponse {
    common.Block last_block = 1;
}

// GET_FRESH_ADDRESS
message GetFreshAddressRequest {
    AccountID account_id = 1;
}

message GetFreshAddressResponse {
    string address = 1;
    // relative path to pubkey from account level
    string path = 2;
}

message BitcoinRequest {
    oneof request {
        SyncAccountRequest sync_account = 1;
        GetBalanceRequest get_balance = 2;
        GetOperationsRequest get_operations = 3;
        GetLastBlockRequest get_last_block = 4;
        GetFreshAddressRequest get_fresh_address = 5;
    }
}