syntax = "proto3";
package ledger.core.message.bitcoin;
import "common/amount.proto";


message Operation {
    enum OperationType {
        SEND = 0;
        RECEIVE = 1;
    }
    common.Amount amount = 1;
    common.Amount fee = 2;
    repeated string receivers = 3;
    repeated string senders = 4;
    OperationType operation_type = 5;
    int64 block_height = 6;
    int64 date_epoch_ms = 7;
}